had multiple issues, with timer not showing after selecting start quiz, had to remodify multiple functions as well as my CSS as there was conflict with the display, i also adjusted font size, project is made spefically to target requests of the USER/Project, saved score and score board was added, timer now displays properly, will be adding styling to project and fix end quiz not working when timer runs to zero

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -10,20 +10,11 @@ body {
     background-repeat: none;
     background-position: center;
     background-size: cover;
+    flex-wrap: wrap;
+    align-content: center;
+    flex-direction: column;
 }
 
-#quiz-container {
-    font-size: 25px;
-    display: flex;
-    justify-content: center;
-    max-width: 600px;
-    width: 100%;
-    background-color: #010008;
-    color: #d1d1d1;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 40px rgba(0, 0, 0, 0.836);
-}
 
 .btn-container {
     display: flex;
@@ -45,16 +36,57 @@ body {
 }
 
 .strtbutton {
-    margin-top:0px;
-    padding:20px;
-    width: 50%;
-    background-color:firebrick;
-    border:none;
-    border-radius:4px;
+    margin-top: 0px;
+    padding: 20px;
+    width: 100%;
+    background-color: firebrick;
+    border: none;
+    border-radius: 10px;
     cursor: pointer;
-
+    margin: 0 auto;
 }
 
 .strtbutton:hover {
     background-color: #d1d1d1;
+}
+
+#start-container {
+    text-align: center;
+}
+
+#timer-container {
+    display: block; 
+}
+
+#scores-list {
+    list-style: none;
+    padding: 0;
+    text-align: left;
+}
+
+.hide {
+    display: none;
+}
+
+#scores-container {
+    margin-top: 20px;
+}
+
+#result-container {
+    background-color: #b83e3e;
+    padding: 20px;
+    justify-content: flex-start;
+    display: flex;
+    flex-wrap: nowrap;
+    align-content: space-around;
+    flex-direction: column;
+    align-items: flex-start;
+    border-radius: 10px;
+    margin-top: 20px;
+    width: 520px;
+
+}
+
+#question-container {
+    font-size:50px;
 }
